--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pbru.permsook.wiwat.bookroompbru" >
+    package="pbru.permsook.wiwat.bookroompbru">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,8 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity1" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +19,8 @@
         </activity>
         <activity android:name=".SingUpActivity2" />
         <activity android:name=".ServiceActivity" />
-        <activity android:name=".DetailActivity" >
-        </activity>
+        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".CalendaActivity"></activity>
     </application>
 
 </manifest>
